# sheep

./: .dockerignore  .env.example  .gitignore  DESIGN_PATTERN.md  DESIGN_PATTERN_SUMMARY.md  Dockerfile  JOKE.md  JOKE2.md  JOKE3.md  RANDOM.txt  README.md  SHEEP.md  STATE_MACHINE.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: quick-task-executor.md
.github/: dependabot.yml
.github/workflows/: ci.yml
specs/001-fast-and-crazy/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/006-joke-markdown/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/007-joke-markdown-2/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/008-design-pattern-analysis/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/008-joke-markdown-file-2/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/008-joke-md/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/008-random-design-pattern-desc/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/008-random-empty-file/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/008-random-empty-file-2/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/008-sheep-story/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/008-undefined-feature/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/009-design-pattern-summary/: feature.yaml  plan.yaml  research.yaml  spec.yaml  tasks.yaml
specs/009-joke-markdown-file/: feature.yaml  plan.yaml  (+3 more)
tests/: __init__.py  test_config.py  test_fast_mode.py  test_hello.py  test_random_word_file.py  test_spec_validation.py  test_tools.py
(+62 files in other folders)
